--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
       <form (ngSubmit)="onSubmit()">
         <div class="mb-3">
           <label class="form-label">Email</label>
-          <input type="email" class="form-control" [(ngModel)]="email" name="email" required>
+          <input type="email" class="form-control" [(ngModel)]="username" name="email" required>
         </div>
         <div class="mb-3">
           <label class="form-label">Password</label>
