Connected store service with UI and location feature

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
-    <div class="overlay">
+  <div class="overlay">
       <h1 class="title">Siopa</h1>
       <h2 class="subheading">Your One-Stop Online Shopping Destination</h2>
-    </div>
+      <button class="btn-submit" (click)="goToNearbyStores()">Find Nearby Stores</button>
   </div>
-  
+</div>
