Improved store list functionality

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,6 @@
   <div class="overlay">
       <h1 class="title">Siopa</h1>
       <h2 class="subheading">Your One-Stop Online Shopping Destination</h2>
-      <button class="btn-submit" (click)="goToNearbyStores()">Find Nearby Stores</button>
+      <button class="btn btn-warning" (click)="goToNearbyStores()">Find Nearby Stores ></button>
   </div>
 </div>
