--- a/src/app/components/nearby-stores/nearby-stores.component.html
+++ b/src/app/components/nearby-stores/nearby-stores.component.html
@@ -1,19 +1,21 @@
-<h2>Nearby Stores</h2>
-
-<p *ngIf="error" class="error">{{ error }}</p>
-<p *ngIf="loading">Loading nearby stores...</p>
-
-<table *ngIf="!loading && stores.length > 0">
-  <tr>
-    <th>Name</th>
-    <th>Region</th>
-    <th>Address</th>
-    <th>Email</th>
-  </tr>
-  <tr *ngFor="let store of stores">
-    <td>{{ store.name }}</td>
-    <td>{{ store.region }}</td>
-    <td>{{ store.address }}</td>
-    <td>{{ store.email }}</td>
-  </tr>
-</table>
+<main role="main">
+  <p *ngIf="error" class="error">{{ error }}</p>
+  <p *ngIf="loading">Loading nearby stores...</p>
+  <div class="album py-5 bg-light">
+    <div class="container" *ngIf="!loading && stores.length > 0">
+      <div class="row">
+        <div class="col-md-4" *ngFor="let store of stores">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text"><strong>{{ store.name }}</strong></p>
+              <p class="card-text">Type: {{ store.storeType }}</p>
+              <p class="card-text">Rating: ★ {{ store.rating }}</p>
+              <p class="card-text">Delivery Fee: £{{ store.deliveryFee }}</p>
+            </div>
+          </div>
+        </div>
+      </div> <!-- End row -->
+    </div> <!-- End container -->
+  </div> <!-- End album -->
+</main>
