--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,20 +1,21 @@
-<div class="container">
-    <p *ngIf="products().length === 0">Loading products...</p>
-  
-    <div class="row">
-      <div class="col-md-4" *ngFor="let product of products()">
-        <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="https://via.placeholder.com/150" alt="Product Image">
-          <div class="card-body">
-            <h5 class="card-title">{{ product.name }}</h5>
-            <p class="card-text">Category: {{ product.category }}</p>
-            <p class="card-text">Price: £{{ product.price }}</p>
-            <p class="card-text">Quantity: {{ product.quantity }}</p>
+<div class="container mt-3">
+  <p *ngIf="products().length === 0" class="text-center">Loading products...</p>
 
-            <button class="btn btn-primary">View Details</button>
-          </div>
+  <div class="row">
+    <div class="col-12" *ngFor="let product of products()">
+      <div class="card mb-3 p-3 d-flex flex-row justify-content-between align-items-center">
+      
+        <div class="card-body flex-grow-1">
+          <h5 class="fw-bold">{{ product.name }}</h5>
+          <p class="mb-1">{{ product.category }}</p>
+          <p class="mb-1">£{{ product.price }}</p>
+          <p class="mb-1">£{{ product.description }}</p>
+        </div>
+        <div class="d-flex align-items-center">
+          <img class="img-fluid rounded me-3" src="https://picsum.photos/120/120" alt="Product Image" width="120" height="120">
+            <i class="btn btn-success d-flex align-items-center justify-content-center">+</i> 
         </div>
       </div>
     </div>
   </div>
-  
+</div>
