--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Siopa</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -12,15 +18,25 @@
             Become a Partner
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="btn btn-white border border-dark text-dark rounded-pill px-4 mx-2" routerLink="/login">
             Login
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="btn btn-white border border-dark text-dark rounded-pill px-4 mx-2" routerLink="/signup">
             Sign Up
           </a>
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+          <a class="btn btn-white border border-dark text-dark rounded-pill px-4 mx-2" routerLink="/dashboard">
+            Dashboard
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+          <button class="btn btn-danger text-white rounded-pill px-4 mx-2" (click)="logout()">
+            Logout
+          </button>
         </li>
       </ul>
     </div>
