--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,21 +1,41 @@
-<div class="container mt-3">
-  <p *ngIf="products().length === 0" class="text-center">Loading products...</p>
-
+<div class="container-fluid">
   <div class="row">
-    <div class="col-12" *ngFor="let product of products()">
-      <div class="card mb-3 p-3 d-flex flex-row justify-content-between align-items-center">
-      
-        <div class="card-body flex-grow-1">
-          <h5 class="fw-bold">{{ product.name }}</h5>
-          <p class="mb-1">{{ product.category }}</p>
-          <p class="mb-1">£{{ product.price }}</p>
-          <p class="mb-1">£{{ product.description }}</p>
-        </div>
-        <div class="d-flex align-items-center">
-          <img class="img-fluid rounded me-3" src="https://picsum.photos/120/120" alt="Product Image" width="120" height="120">
-            <i class="btn btn-success d-flex align-items-center justify-content-center">+</i> 
+    <!-- Product List -->
+    <div class="col-md-8">
+      <p *ngIf="products().length === 0" class="text-center">Loading products...</p>
+
+      <div class="row">
+        <div class="col-12" *ngFor="let product of products()">
+          <div class="card mb-3 p-3 d-flex flex-row justify-content-between align-items-center">
+          
+            <div class="card-body flex-grow-1">
+              <h5 class="fw-bold">{{ product.name }}</h5>
+              <p class="mb-1">{{ product.category }}</p>
+              <p class="mb-1">£{{ product.price }}</p>
+              <p class="mb-1">{{ product.description }}</p>
+            </div>
+
+            <div class="d-flex align-items-center">
+              <img class="img-fluid rounded me-3" src="https://picsum.photos/120/120" alt="Product Image" width="120" height="120">
+              
+              <i 
+                class="btn d-flex align-items-center justify-content-center"
+                [class.btn-success]="isLoggedIn()"
+                [class.btn-secondary]="!isLoggedIn()"
+                (click)="isLoggedIn() ? addToBasket(product) : handleAddToCartClick()"
+                title="{{ isLoggedIn() ? 'Add to basket' : 'Login to add products' }}">
+                +
+              </i>
+            </div>
+
+          </div>
         </div>
       </div>
+    </div>
+
+    <!-- Basket Sidebar -->
+    <div class="col-md-4">
+      <app-basket></app-basket>
     </div>
   </div>
 </div>
