--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -19,19 +19,47 @@
   
       <div class="card p-3 mb-4">
         <h4 class="fw-bold">Customer Details</h4>
-        <form (submit)="placeOrder()">
+        <form (ngSubmit)="placeOrder()">
           <div class="mb-3">
-            <label class="form-label">Full Name</label>
-            <input type="text" class="form-control" [(ngModel)]="customerInfo.name" name="name" required>
+            <label class="form-label">Forename</label>
+            <input type="text" class="form-control" [(ngModel)]="customerInfo.forename" name="forename" required>
           </div>
+  
+          <div class="mb-3">
+            <label class="form-label">Surname</label>
+            <input type="text" class="form-control" [(ngModel)]="customerInfo.surname" name="surname" required>
+          </div>
+  
+          <div class="mb-3">
+            <label class="form-label">Phone Number</label>
+            <input type="tel" class="form-control" [(ngModel)]="customerInfo.phoneNumber" name="phoneNumber" required>
+          </div>
+  
           <div class="mb-3">
             <label class="form-label">Email</label>
             <input type="email" class="form-control" [(ngModel)]="customerInfo.email" name="email" required>
           </div>
+  
           <div class="mb-3">
-            <label class="form-label">Shipping Address</label>
-            <input type="text" class="form-control" [(ngModel)]="customerInfo.address" name="address" required>
+            <label class="form-label d-block">Order Type</label>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="orderTypeSwitch" [(ngModel)]="customerInfo.isDelivery" name="orderType">
+              <label class="form-check-label" for="orderTypeSwitch">
+                {{ customerInfo.isDelivery ? 'Delivery' : 'Collection' }}
+              </label>
+            </div>
           </div>
+  
+          <div class="mb-3" *ngIf="customerInfo.isDelivery">
+            <label class="form-label">Delivery Address</label>
+            <input type="text" class="form-control" [(ngModel)]="customerInfo.deliveryAddress" name="deliveryAddress" required>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Billing Address</label>
+            <input type="text" class="form-control" [(ngModel)]="customerInfo.billingAddress" name="cardNumber" required>
+          </div>
+  
           <div class="mb-3">
             <label class="form-label">Card Number</label>
             <input type="text" class="form-control" [(ngModel)]="customerInfo.cardNumber" name="cardNumber" required>
